# shift_modify_detector

./: .gitignore  Makefile  conv.py  pyproject.toml
src/: detect_diff.py
src/conf/: shift.yml
