[tool.poetry]
name = "shift-modify-detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shift_modify_detector"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"
tqdm = "^4.64.1"
pyyaml = "^6.0"
pandas = "^1.5.1"
pdf2image = "^1.16.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
